--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
         </div>
       </form>
 
-      <form action="" method="POST" enctype="multipart/form-data">
+      <form action="/add_data" method="POST" enctype="multipart/form-data">
         <div class="form-group d-flex">
           <input type="file" name="text">
           <input type="submit" value="Submit" class="btn btn-success" />
